# talk-to-the-chart

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: architecture.md
src/talk_to_chart/: __init__.py  main.py
src/talk_to_chart/adapters/: __init__.py  controllers.py
src/talk_to_chart/domain/: entities.py
src/talk_to_chart/infrastructure/: gemini_service.py  repositories.py
src/talk_to_chart/use_cases/: __init__.py  interfaces.py
tests/: test_search_use_case.py
